# quantum_studies

./: README.md
quantum-studies/: README.md  pyproject.toml
quantum-studies/src/quantum_studies/: bell_state_alg.py  block_sphere.py  ibm_qpus.py
quantum-studies/src/quantum_studies/algorithms/: 1_qubit_phase_estimation.ipynb  deutsch_algorithm.ipynb  generic_phase_estimation.ipynb  phase_estimation.ipynb  simons_algorithm.ipynb
quantum-studies/src/quantum_studies/examples/: bell_state_example.py  ibm_qpu_usage.ipynb
quantum-studies/src/quantum_studies/qiskit_circuits/: 9_qubit_error_correction_code.ipynb  bell_state_circuit.py  bernstein_vazirani_circuit.py  ghz_state_circuit.py  qiskit_version_info.ipynb  reversible_addition.py  statevectorestimator_example.py  teleportation.py
quantum-studies/src/quantum_studies/qiskit_circuits/advanced/: circuit.qasm  coupling_map.py  gate_fidelity.py  load_qasm_file.py  parallel_map.ipynb  random_unitary_operator.ipynb  sqrt_x_gate.ipynb  state_fidelity.ipynb  tesor_density_matrix.py
quantum-studies/src/quantum_studies/qiskit_circuits/basics/: all_bell_states.ipynb  appending_gates.ipynb  barrier_example.py  broadcasting.py  composing.ipynb  composing_circuits.ipynb  custom_controlled_gate.py  cx_simple_example.py  if_else_circuits.ipynb  initialize_circuit.ipynb  mcx_gate_append.py  measurement.py  memory_shots.py  pauli_operators.py  phase_shift_parametrized_circuit.ipynb  phase_shift_parametrized_circuit.py  showing_state_probabilities.ipynb  sparse_pauli_op.py  toffoli_gate.py
quantum-studies/src/quantum_studies/statevector_estimator/: statevectorestimator_example2.ipynb  statevectorestimator_example3.py
quantum-studies/src/quantum_studies/trigonometry/: unit_circle.ipynb
(+22 files in other folders)
