[tool.poetry]
name = "quantum-studies"
version = "0.1.0"
description = ""
authors = ["Hernan Esteves <hernaner28@gmailcom>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "0.29.1"
matplotlib = "==3.4.3"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
ipywidgets = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
