[tool.poetry]
name = "quantum-studies"
version = "0.1.0"
description = ""
authors = ["Hernan Esteves <hernaner28@gmailcom>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
qiskit-terra = "0.18.2"       # corresponds to Qiskit Terra in 0.29.1
qiskit-aer = "0.8.2"          # Qiskit Aer version in 0.29.1
qiskit-ignis = "0.6.0"        # Qiskit Ignis version in 0.29.1 (if needed for backward-compat)
qiskit-ibmq-provider = "0.16.0"  # IBM Q provider for Qiskit 0.29.1
matplotlib = "3.4.3"
ipykernel = "^6.0"
seaborn = "^0.11"
ipywidgets = "^7.6"
numpy = "^1.20"   # ensure NumPy 1.20+ is used

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
